# ATVImageLogger

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: CMakeLists.txt  README.md
include/qextserialport/: CMakeLists.txt  README.md
include/qtgpsc/: satellite.h
src/: ATVImageLogger.cpp  ATVImageLogger.h  CMakeLists.txt  VisionSpray.cpp  VisionSpray.h  datalogger.cpp  datalogger.h  demosaic_cv.cpp  demosaic_cv.h  detectCameraErrors.cpp  detectCameraErrors.h  exg_cv.cpp  exg_cv.h  gpsreader.cpp  gpsreader.h  main.cpp  spraytimekeeper.cpp  spraytimekeeper.h
